--- a/concesswebapi/src/main/resources/application.properties
+++ b/concesswebapi/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+security.jwt.expiracao=60
+security.jwt.chave-assinatura=SmVzdXMgw6kgc3VmaWNpZW50ZQ==
